--- a/script/Final_Viva-Yaohan.Rmd
+++ b/script/Final_Viva-Yaohan.Rmd
@@ -65,7 +65,7 @@ Important Work Restrictions for massDOT: https://www.mass.gov/doc/controls-guide
 The Fall season defined by MassDOT is from August.15 to November.1, so we use bike data for August, September and October.
 
 2. Bike Data
-- Bike ridership
+- Bike Ridership
 Blue Bikes Comprehensive Trip Histories: https://s3.amazonaws.com/hubway-data/index.html
 2017: August, September, October
 2019: August, September, October
@@ -119,7 +119,7 @@ bus_stop <- st_read(here::here("data/final/mbtabus/MBTABUSSTOPS_PT.shp"))
 
 
 # Demographic Data
-## Load census tract data
+## Load Census Tract Data
 census_api_key("3ec2bee8c227ff3f9df970d0ffbb11ee1384076e", install = TRUE, overwrite = TRUE)
 
 acs_variable_list.2017 <- load_variables(2017, # Year
@@ -273,7 +273,7 @@ bike_rider_19 <- bike_rider_19_start %>%
   relocate(Total_Docks, .before = geometry)
 
 rm(list = setdiff(ls(), c("tran_line", "tran_stop", "tran_rider_17", "tran_rider_19",
-                          "bike_rider_17", "bike_rider_19", "mbta_core")))
+                          "bike_rider_17", "bike_rider_19", "bus_stop", "mbta_core")))
 
 
 # Bus Data
