--- a/script/Final_Viva-Yaohan.Rmd
+++ b/script/Final_Viva-Yaohan.Rmd
@@ -54,15 +54,15 @@ conflicts_prefer(sf::st_crs)
 - Transit Ridership
 MBTA Rail Ridership by Time Period, Season, Route/Line, and Stop: https://mbta-massdot.opendata.arcgis.com/search?tags=ridership
 The data is for Fall2019, Fall2018, and Fall2017. Since Fall2018 only has data for September, so we only use ridership data for Fall2019 and Fall2017.
-MBTA Gated Station Entries: https://mbta-massdot.opendata.arcgis.com/datasets/7859894afb5641ce91a2bb03599fdf5b/about
 
 - Transit Station
 MBTA Rapid Transit: https://www.mass.gov/info-details/massgis-data-mbta-rapid-transit#downloads-
 Name and location for each transit stop； Combined with ridership data.
 
-- Definition for "Fall" in MassDOT
-Important Work Restrictions for massDOT: https://www.mass.gov/doc/controls-guidelines-attachment-a-important-work-restrictions/download
+- 
+Definition for "Fall" in MassDOT: https://www.mass.gov/doc/controls-guidelines-attachment-a-important-work-restrictions/download
 The Fall season defined by MassDOT is from August.15 to November.1, so we use bike data for August, September and October.
+Definition for "Time Period" in MassDOT: https://cdn.mbta.com/sites/default/files/2021-09/service-delivery-policy-june-2021.pdf
 
 2. Bike Data
 - Bike Ridership
@@ -112,8 +112,6 @@ bike_stop <- read_csv(here::here("data/final/current_bluebikes_stations.csv"))
 
 
 # Bus Data
-## Bus Ridership
-
 ## Bus Stop
 bus_stop <- st_read(here::here("data/final/mbtabus/MBTABUSSTOPS_PT.shp"))
 
@@ -164,14 +162,39 @@ name_rider <- unique(tran_rider$stop_name)
 name_stop <- tran_stop$STATION
 not_in_station <- as.data.frame(setdiff(name_rider, name_stop))
 
-## Transit Station
-
 ## Transit Ridership
-tran_rider_17 <- tran_rider %>%
-  filter(season == "Fall 2017")
+tran_rider <- tran_rider %>%
+  mutate(time_period = paste0(day_type_name, sep = "_", time_period_name))
 
-tran_rider_19 <- tran_rider %>%
-  filter(season == "Fall 2019")
+tran_stop <- tran_stop %>%
+  filter(LINE != "SILVER") ## Silver Line is BRT
+
+### Transit Ridership by Time Period
+tran_rider_17_period <- tran_rider %>%
+  filter(season == "Fall 2017") %>%
+  group_by(time_period, stop_name) %>%
+  summarise(aver_ons = sum(average_ons),
+            aver_offs = sum(average_flow)) %>%
+  ungroup() %>%
+  mutate(total_rider = aver_ons + aver_offs) %>%
+  select(-aver_ons, -aver_offs) %>%
+  left_join(., tran_stop, by = c("stop_name" = "STATION")) %>%
+  na.omit() %>%
+  select(-LINE, -ROUTE) %>%
+  rename(terminus = TERMINUS) %>%
+  relocate(time_period, .after = stop_name)
+
+### Total Transit Ridership
+tran_rider_17_total <- tran_rider_17_period %>%
+  st_drop_geometry() %>%
+  group_by(stop_name) %>%
+  summarise(total_rider = sum(total_rider)) %>%
+  left_join(., tran_stop, by = c("stop_name" = "STATION")) %>%
+  na.omit() %>%
+  select(-LINE, -ROUTE) %>%
+  rename(terminus = TERMINUS)
+
+
 
 
 # Bike Data
